--- a/llapp/src/App.css
+++ b/llapp/src/App.css
@@ -30,11 +30,34 @@ nav ul li {
 
 nav ul li a{
   color: #000;
+  font-weight: 600;
+  position:relative;
 }
 
-nav ul li a:hover{
-  text-decoration: underline solid #495E57;
-  
+nav ul li a:after{
+
+  content: '';
+height:2.5px;
+border-radius: 20px;
+width: 55%;
+background:  #F4CE14;
+position:absolute;
+left: 0;
+bottom: 1.5px;
+opacity: 0;
+
+transition: transform 0.5s ;
+transform: scaleX(0);
+transform-origin: right;
+pointer-events: none;
+}
+
+nav ul li a:hover::after{
+  opacity: 1;
+  bottom: -2px;
+  position:absolute;
+  transform: scaleX(1);
+  transform-origin: left;
 }
 
 .menu-icon {
@@ -86,6 +109,7 @@ position: relative;
 h2 {
   color: #F4CE14;
   font-size: 40px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
 h3 {
@@ -194,6 +218,12 @@ input, label{
   border-radius: 8px;
 }
 
+.menu-items img:hover{
+  transform: scale(0.95);
+  box-shadow: 0 10px 14px 0 rgba(0,0,0,0.24),0 15px 48px 0 rgba(0,0,0,0.19);
+  transition: all ease-in-out 0.5s;
+}
+
 .menu-container img{
   width: 100%;
   height: 233px;
@@ -215,6 +245,11 @@ input, label{
   margin-bottom: 20px;
   font-size: 16px;
   font-weight: 600;
+}
+
+.orderbtn:hover{
+  transform: scale(1.1);
+  transition: all ease-in-out 0.3s;
 }
 
 footer section{
@@ -302,6 +337,7 @@ footer ul li{
   footer section{
     padding: 10px 8%;
     flex-direction: column;
+  
   }
   .company-info p{
     width: 100%;
@@ -311,3 +347,127 @@ footer ul li{
 .hidden{
   display: none;
 }
+
+
+footer .socials ul li a:hover{
+  color: #F4CE14;
+}
+
+.footy{
+  background-color:  #333333;
+  color: white;
+}
+
+.links a{
+  color: white;
+}
+
+.links a:hover{
+  color: #F4CE14;
+}
+
+.socials a{
+  color: white;
+}
+
+.logo img{
+  height: 200px;
+  width: 120px;
+}
+
+/*Button Reserve a  Table */
+.banner button:hover{
+  background-color: #333333;
+  color:#F4CE14;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+  transition: all ease-in 0.3s;
+}
+
+
+
+/* Button Order Now*/
+.orderbtn:hover{
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+  transition: all ease-in 0.4s;
+}
+
+/* Order Menu button*/
+
+.lmenu:hover{
+  background-color: #333333;
+  color:#F4CE14;
+  box-shadow: 0 10px 14px 0 rgba(0,0,0,0.24),0 15px 48px 0 rgba(0,0,0,0.19);
+  transition: all ease-in 0.3s;
+}
+
+/* Testimonials */
+
+.reviews p{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: 600;
+  font-size: large;
+}
+.reviews{
+  display: flex;
+  flex-wrap: wrap;
+
+}
+
+.Testimonials{
+  background-color: #495E57;
+
+}
+.testi{
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  display: flex;
+  background-color: #495E57;
+  padding: 40px;
+  width: auto;
+  color: black;
+ 
+}
+
+.personpic{
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  
+}
+
+.per1,.per2,.per3,.per4{
+  float: left;
+  width: 40%;
+  background-color: #EDEFEE;
+  border-radius: 10px;
+  box-shadow: 0 10px 14px 0 rgba(0,0,0,0.24),0 15px 48px 0 rgba(0,0,0,0.19);
+  transition: all ease-in 0.3s;
+  margin: 10px;
+
+}
+
+.per1 img{
+  border-radius: 10px;
+  width: 40%;
+}
+.per2 img{
+  border-radius: 10px;
+  width: 40%;
+}
+.per3 img{
+  border-radius: 10px;
+  width: 40%;
+}
+.per4 img{
+  border-radius: 10px;
+  width: 40%;
+}
+
+.reviews div:hover{
+  transform: scale(1.2);
+  transition: all ease-in 0.3s;
+  background-color: #333333;
+  color: #F4CE14;
+}
+
